<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">System UI</string>
    <string name="battery_low_title">Turn on Battery Saver?</string>
    <string name="battery_low_description">You have <xliff:g id="percentage" example="20%">%s</xliff:g> battery left. Battery Saver turns on Dark theme, restricts background activity, and delays notifications.</string>
    <string name="battery_low_intro">Battery Saver turns on Dark theme, restricts background activity, and delays notifications.</string>
    <string name="battery_low_percent_format"><xliff:g id="percentage">%s</xliff:g> remaining</string>
    <string name="invalid_charger_title">Can\'t charge via USB</string>
    <string name="invalid_charger_text">Use the charger that came with your device</string>
    <string name="battery_saver_confirmation_title">Turn on Battery Saver?</string>
    <string name="battery_saver_confirmation_title_generic">About Battery Saver</string>
    <string name="battery_saver_confirmation_ok">Turn on</string>
    <string name="battery_saver_start_action">Turn on</string>
    <string name="battery_saver_dismiss_action">No thanks</string>
    <string name="status_bar_settings_auto_rotation">Auto-rotate screen</string>
    <string name="status_bar_network_name_separator" translatable="false"> - </string>
    <string name="usb_device_permission_prompt">Allow <xliff:g id="application" example= "Usb Mega Player">%1$s</xliff:g> to access <xliff:g id="usb_device" example="USB Headphones">%2$s</xliff:g>?</string>
    <string name="usb_device_permission_prompt_warn">Allow <xliff:g id="application" example= "Usb Mega Player">%1$s</xliff:g> to access <xliff:g id="usb_device" example="USB Headphones">%2$s</xliff:g>?\nThis app has not been granted record permission but could capture audio through this USB device.</string>
    <string name="usb_audio_device_permission_prompt_title">Allow <xliff:g id="application" example= "Usb Mega Player">%1$s</xliff:g> to access <xliff:g id="usb_device" example="USB Headphones">%2$s</xliff:g>?</string>
    <string name="usb_audio_device_confirm_prompt_title">Open <xliff:g id="application" example= "Usb Mega Player">%1$s</xliff:g> to handle <xliff:g id="usb_device" example="USB Headphones">%2$s</xliff:g>?</string>
    <string name="usb_audio_device_prompt_warn">This app has not been granted record permission but could capture audio through this USB device. Using <xliff:g id="application" example= "Usb Mega Player">%1$s</xliff:g> with this device might prevent hearing calls, notifications and alarms.</string>
    <string name="usb_audio_device_prompt">Using <xliff:g id="application" example= "Usb Mega Player">%1$s</xliff:g> with this device might prevent hearing calls, notifications and alarms.</string>
    <string name="usb_accessory_permission_prompt">Allow <xliff:g id="application" example= "Usb Mega Player">%1$s</xliff:g> to access <xliff:g id="usb_accessory"  example="USB Dock">%2$s</xliff:g>?</string>
    <string name="usb_device_confirm_prompt">Open <xliff:g id="application">%1$s</xliff:g> to handle <xliff:g id="usb_device">%2$s</xliff:g>?</string>
    <string name="usb_device_confirm_prompt_warn">Open <xliff:g id="application" example= "Usb Mega Player">%1$s</xliff:g> to handle <xliff:g id="usb_device" example="USB Headphones">%2$s</xliff:g>?\nThis app has not been granted record permission but could capture audio through this USB device.</string>
    <string name="usb_accessory_confirm_prompt">Open <xliff:g id="application">%1$s</xliff:g> to handle <xliff:g id="usb_accessory">%2$s</xliff:g>?</string>
    <string name="usb_accessory_uri_prompt">No installed apps work with this USB accessory. Learn more about this accessory at <xliff:g id="url">%1$s</xliff:g></string>
    <string name="title_usb_accessory">USB accessory</string>
    <string name="label_view">View</string>
    <string name="always_use_device">Always open <xliff:g id="application">%1$s</xliff:g> when <xliff:g id="usb_device">%2$s</xliff:g> is connected</string>
    <string name="always_use_accessory">Always open <xliff:g id="application">%1$s</xliff:g> when <xliff:g id="usb_accessory">%2$s</xliff:g> is connected</string>
    <string name="usb_debugging_title">Allow USB debugging?</string>
    <string name="usb_debugging_message">The computer\'s RSA key fingerprint is:\n<xliff:g id="fingerprint">%1$s</xliff:g></string>
    <string name="usb_debugging_always">Always allow from this computer</string>
    <string name="usb_debugging_allow">Allow</string>
    <string name="usb_debugging_secondary_user_title">USB debugging not allowed</string>
    <string name="usb_debugging_secondary_user_message">The user currently signed in to this device can\'t turn on USB debugging. To use this feature, switch to the primary user.</string>
    <string name="hdmi_cec_set_menu_language_title">Do you want to change the system language to <xliff:g id="language" example="German">%1$s</xliff:g>?</string>
    <string name="hdmi_cec_set_menu_language_description">System language change requested by another device</string>
    <string name="hdmi_cec_set_menu_language_accept">Change language</string>
    <string name="hdmi_cec_set_menu_language_decline">Keep current language</string>
    <string name="wifi_debugging_title">Allow wireless debugging on this network?</string>
    <string name="wifi_debugging_message">Network Name (SSID)\n<xliff:g id="ssid" example="My wifi">%1$s</xliff:g>\n\nWi\u2011Fi Address (BSSID)\n<xliff:g id="bssid" example="AB:CD:EF:12:34:56">%2$s</xliff:g></string>
    <string name="wifi_debugging_always">Always allow on this network</string>
    <string name="wifi_debugging_allow">Allow</string>
    <string name="wifi_debugging_secondary_user_title">Wireless debugging not allowed</string>
    <string name="wifi_debugging_secondary_user_message">The user currently signed in to this device can\u2019t turn on wireless debugging. To use this feature, switch to the primary user.</string>
    <string name="usb_contaminant_title">USB port disabled</string>
    <string name="usb_contaminant_message">To protect your device from liquid or debris, the USB port is disabled and won\u2019t detect any accessories.\n\nYou\u2019ll be notified when it\u2019s okay to use the USB port again.</string>
    <string name="usb_port_enabled">USB port enabled to detect chargers and accessories</string>
    <string name="usb_disable_contaminant_detection">Enable USB</string>
    <string name="learn_more">Learn more</string>
    <string name="global_action_screenshot">Screenshot</string>
    <string name="global_action_smart_lock_disabled">Smart Lock disabled</string>
    <string name="remote_input_image_insertion_text">sent an image</string>
    <string name="screenshot_saving_title">Saving screenshot\u2026</string>
    <string name="screenshot_saved_title">Screenshot saved</string>
    <string name="screenshot_failed_title">Couldn\'t save screenshot</string>
    <string name="screenshot_failed_to_save_user_locked_text">Device must be unlocked before screenshot can be saved</string>
    <string name="screenshot_failed_to_save_unknown_text">Try taking screenshot again</string>
    <string name="screenshot_failed_to_save_text">Can\'t save screenshot</string>
    <string name="screenshot_failed_to_capture_text">Taking screenshots isn\'t allowed by the app or
        your organization</string>
    <string name="screenshot_blocked_by_admin">Taking screenshots is blocked by your IT admin</string>
    <string name="screenshot_edit_label">Edit</string>
    <string name="screenshot_edit_description">Edit screenshot</string>
    <string name="screenshot_share_description">Share screenshot</string>
    <string name="screenshot_delete_label">Delete</string>
    <string name="screenshot_delete_description">Delete screenshot</string>
    <string name="screenshot_scroll_label">Capture more</string>
    <string name="screenshot_dismiss_description">Dismiss screenshot</string>
    <string name="screenshot_preview_description">Screenshot preview</string>
    <string name="screenshot_top_boundary_pct">Top boundary <xliff:g id="percent" example="50">%1$d</xliff:g> percent</string>
    <string name="screenshot_bottom_boundary_pct">Bottom boundary <xliff:g id="percent" example="50">%1$d</xliff:g> percent</string>
    <string name="screenshot_left_boundary_pct">Left boundary <xliff:g id="percent" example="50">%1$d</xliff:g> percent</string>
    <string name="screenshot_right_boundary_pct">Right boundary <xliff:g id="percent" example="50">%1$d</xliff:g> percent</string>
    <string name="screenrecord_name">Screen Recorder</string>
    <string name="screenrecord_background_processing_label">Processing screen recording</string>
    <string name="screenrecord_channel_description">Ongoing notification for a screen record session</string>
    <string name="screenrecord_start_label">Start Recording?</string>
    <string name="screenrecord_description">While recording, Android System can capture any sensitive information that\u2019s visible on your screen or played on your device. This includes passwords, payment info, photos, messages, and audio.</string>
    <string name="screenrecord_audio_label">Record audio</string>
    <string name="screenrecord_device_audio_label">Device audio</string>
    <string name="screenrecord_device_audio_description">Sound from your device, like music, calls, and ringtones</string>
    <string name="screenrecord_mic_label">Microphone</string>
    <string name="screenrecord_device_audio_and_mic_label">Device audio and microphone</string>
    <string name="screenrecord_start">Start</string>
    <string name="screenrecord_ongoing_screen_only">Recording screen</string>
    <string name="screenrecord_ongoing_screen_and_audio">Recording screen and audio</string>
    <string name="screenrecord_taps_label">Show touches on screen</string>
    <string name="screenrecord_stop_label">Stop</string>
    <string name="screenrecord_share_label">Share</string>
    <string name="screenrecord_save_title">Screen recording saved</string>
    <string name="screenrecord_save_text">Tap to view</string>
    <string name="screenrecord_delete_error">Error deleting screen recording</string>
    <string name="screenrecord_start_error">Error starting screen recording</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_home">Home</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_accessibility_button">Accessibility</string>
    <string name="accessibility_rotate_button">Rotate screen</string>
    <string name="accessibility_recent">Overview</string>
    <string name="accessibility_camera_button">Camera</string>
    <string name="accessibility_phone_button">Phone</string>
    <string name="accessibility_voice_assist_button">Voice Assist</string>
    <string name="accessibility_wallet_button">Wallet</string>
    <string name="accessibility_qr_code_scanner_button">QR Code Scanner</string>
    <string name="accessibility_unlock_button">Unlock</string>
    <string name="cancel">Cancel</string>
    <string name="quick_settings_dnd_label">Do Not Disturb</string>
    <string name="quick_settings_bluetooth_label">Bluetooth</string>
    <string name="quick_settings_camera_label">Camera access</string>
    <string name="quick_settings_wifi_label">Wi-Fi</string>
    <string name="quick_settings_cast_title">Screen Cast</string>
    <string name="quick_settings_hotspot_label">Hotspot</string>
    <string name="quick_settings_cellular_detail_title">Mobile data</string>
    <string name="status_bar_ethernet">Ethernet</string>
    <string name="status_bar_alarm">Alarm</string>
    <string name="status_bar_work">Work profile</string>
    <string name="status_bar_airplane">Airplane mode</string>
    <string name="battery">Battery</string>
    <string name="headset">Headset</string>
    <string name="tuner_time">Time</string>
</resources>